# console

./: CHANGELOG.md  Cargo.toml  LICENSE-MIT  README.md  justfile
slowchop_console/: Cargo.toml  README.md
slowchop_console/assets/: examples.rn
slowchop_console/examples/: full.rs  v2.rs
slowchop_console/src/: actions.rs  error.rs  lib.rs  parse.rs  plugin.rs  render.rs  subscriber.rs
slowchop_console/tests/: sub.rs  tests.rs
slowchop_console_derive/: Cargo.toml  README.md
slowchop_console_derive/src/: lib.rs  v2.rs
