[package]
name = "slowchop_console"
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/slowchop/console"
description = "A Quake style console and log plugin for Bevy."
keywords = ["bevy", "console", "log", "quake"]
categories = ["game-development", "command-line-interface"]
readme = "README.md"

[dependencies]
slowchop_console_derive = { version = "0.1.0", path = "../slowchop_console_derive" }
thiserror = "1.0.50"
shlex = "1.2.0"
tracing-subscriber = "0.3.18"

[dependencies.bevy]
version = "0.12.0"
default-features = false
features = [
    "bevy_ui",
]

[dev-dependencies]
bevy-inspector-egui = "0.21.0"

[dev-dependencies.bevy]
version = "0.12.0"
default-features = false
features = [
    "bevy_winit",
    "bevy_ui",
    "default_font",
    "bevy_pbr", # This causes warnings when not included
]

