[package]
name = "slowchop_console"
version = "0.1.3"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/slowchop/console"
description = "A Quake style console and log plugin for Bevy."
keywords = ["bevy", "console", "log", "quake"]
categories = ["game-development", "command-line-interface"]
readme = "README.md"

[dependencies]
bevy = { workspace = true }
slowchop_console_derive = { workspace = true }
shlex = { workspace = true }
thiserror = { workspace = true }
tracing-subscriber = { workspace = true }
once_cell = { workspace = true }

[dev-dependencies]

[dev-dependencies.bevy]
workspace = true
default-features = false
features = [
    "bevy_winit",
    "bevy_ui",
    "bevy_gizmos",
    "default_font",
    "bevy_pbr",     # This causes warnings when not included
]
