[package]
name = "slowchop_console_derive"
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/slowchop/console"
description = "A Quake style console and log plugin for Bevy."
keywords = ["bevy", "console", "log", "quake"]
categories = ["game-development", "command-line-interface"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.70"
quote = "1.0.33"
syn = { version = "2.0.39", features = ["extra-traits"] }
